[workspace]
resolver = "2"
members = [
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Internal crates
tokio = { version = "1.49.0", path = "tokio" }
tokio-macros = { version = "2.6.0", path = "tokio-macros" }
tokio-test = { version = "0.4.5", path = "tokio-test" }
tokio-stream = { version = "0.1.18", path = "tokio-stream" }
tokio-util = { version = "0.7.18", path = "tokio-util" }

# External crates
async-stream = "0.3"
backtrace = "0.3.76"
bytes = "1.11.1"
criterion = "0.8.2"
doc-comment = "0.3.4"
futures = { version = "0.4.0-alpha.0", default-features = false, features = ["async-await", "thread-pool"] }
futures-concurrency = "7.7.1"
futures-core = "1.0.0-alpha.0"
futures-io = "0.3.31"
futures-sink = "0.4.0-alpha.0"
futures-test = "0.4.0-alpha.0"
futures-util = "0.4.0-alpha.0"
hashbrown = { version = "0.16.1", default-features = false }
http = "1"
httparse = "1.10"
httpdate = "1.0"
io-uring = { version = "0.7.11", default-features = false }
libc = "0.2.182"
loom = { version = "0.7", features = ["futures", "checkpoint"] }
mio = { version = "1.1.1", default-features = false }
mio-aio = { version = "1", features = ["tokio"] }
mockall = "0.14.0"
nix = { version = "0.31.1", default-features = false, features = ["aio", "fs", "socket"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
pin-project-lite = "0.2.16"
proc-macro2 = "1.0.106"
proptest = "1"
quote = "1"
rand = "0.10"
rand_chacha = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook-registry = "1.4.8"
slab = "0.4.12"
socket2 = { version = "0.6.2", features = ["all"] }
syn = { version = "2.0", features = ["full"] }
tempfile = "3.25.0"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-mock = "=0.1.0-beta.3"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
trybuild = "1.0"
wasm-bindgen-test = "0.3.58"
windows-sys = "0.61"

[patch.crates-io]
# Internal crates
tokio = { path = "tokio" }
tokio-macros = { path = "tokio-macros" }
tokio-test = { path = "tokio-test" }
tokio-stream = { path = "tokio-stream" }
tokio-util = { path = "tokio-util" }

# Forked crates
nix = { path = "../nix-rs" }
rand = { path = "../rand" }
rand_core = { path = "../rand_core" }
rand_chacha = { path = "../rngs/rand_chacha" }
serde = { path = "../serde/serde" }
serde_core = { path = "../serde/serde_core" }
serde_derive = { path = "../serde/serde_derive" }
serde_json = { path = "../json" }
tempfile = { path = "../tempfile" }
tracing = { path = "../tracing/tracing" }
tracing-mock = { path = "../tracing/tracing-mock" }
tracing-subscriber = { path = "../tracing/tracing-subscriber" }
futures = { path = "../futures-rs/futures" }
futures-core = { path = "../futures-rs/futures-core" }
futures-io = { path = "../futures-rs/futures-io" }
futures-sink = { path = "../futures-rs/futures-sink" }
futures-test = { path = "../futures-rs/futures-test" }
futures-util = { path = "../futures-rs/futures-util" }
futures-channel = { path = "../futures-rs/futures-channel" }
futures-task = { path = "../futures-rs/futures-task" }
futures-executor = { path = "../futures-rs/futures-executor" }
futures-macro = { path = "../futures-rs/futures-macro" }
async-stream = { path = "../async-stream/async-stream" }
async-stream-impl = { path = "../async-stream/async-stream-impl" }

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(fuzzing)',
  'cfg(loom)',
  'cfg(mio_unsupported_force_poll_poll)',
  'cfg(tokio_allow_from_blocking_fd)',
  'cfg(tokio_internal_mt_counters)',
  'cfg(tokio_no_parking_lot)',
  'cfg(tokio_no_tuning_tests)',
  'cfg(tokio_unstable)',
  'cfg(target_os, values("cygwin"))',
] }
