[package]
name = "benches"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license = "MIT"

[features]
test-util = ["tokio/test-util"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "sync_broadcast"
path = "sync_broadcast.rs"
harness = false

[[bench]]
name = "sync_mpsc"
path = "sync_mpsc.rs"
harness = false

[[bench]]
name = "sync_mpsc_oneshot"
path = "sync_mpsc_oneshot.rs"
harness = false

[[bench]]
name = "sync_watch"
path = "sync_watch.rs"
harness = false

[[bench]]
name = "rt_current_thread"
path = "rt_current_thread.rs"
harness = false

[[bench]]
name = "rt_multi_threaded"
path = "rt_multi_threaded.rs"
harness = false

[[bench]]
name = "sync_notify"
path = "sync_notify.rs"
harness = false

[[bench]]
name = "sync_rwlock"
path = "sync_rwlock.rs"
harness = false

[[bench]]
name = "sync_semaphore"
path = "sync_semaphore.rs"
harness = false

[[bench]]
name = "signal"
path = "signal.rs"
harness = false

[[bench]]
name = "fs"
path = "fs.rs"
harness = false

[[bench]]
name = "copy"
path = "copy.rs"
harness = false

[[bench]]
name = "time_now"
path = "time_now.rs"
harness = false

[[bench]]
name = "time_timeout"
path = "time_timeout.rs"
harness = false

[[bench]]
name = "spawn_blocking"
path = "spawn_blocking.rs"
harness = false

[lints]
workspace = true
