[package]
name = "examples"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license = "MIT"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }

tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, default-features = true, features = ["thread-pool"] }
http = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
httparse = { workspace = true }
httpdate = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(all(tokio_unstable, target_os = "linux"))'.dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing", "taskdump"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true }

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "connect-tcp"
path = "connect-tcp.rs"

[[example]]
name = "connect-udp"
path = "connect-udp.rs"

[[example]]
name = "echo-tcp"
path = "echo-tcp.rs"

[[example]]
name = "echo-udp"
path = "echo-udp.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "print_each_packet"
path = "print_each_packet.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "tinydb"
path = "tinydb.rs"

[[example]]
name = "udp-client"
path = "udp-client.rs"

[[example]]
name = "udp-codec"
path = "udp-codec.rs"

[[example]]
name = "tinyhttp"
path = "tinyhttp.rs"

[[example]]
name = "custom-executor"
path = "custom-executor.rs"

[[example]]
name = "custom-executor-tokio-context"
path = "custom-executor-tokio-context.rs"

[[example]]
name = "named-pipe"
path = "named-pipe.rs"

[[example]]
name = "named-pipe-ready"
path = "named-pipe-ready.rs"

[[example]]
name = "named-pipe-multi-client"
path = "named-pipe-multi-client.rs"

[[example]]
name = "dump"
path = "dump.rs"

[lints]
workspace = true
