[package]
name = "stress-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
rand = { workspace = true }

[lints]
workspace = true
