[package]
name = "tests-build"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[features]
full = ["tokio/full"]
rt = ["tokio/rt", "tokio/macros"]

[dependencies]
tokio = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true
