[package]
name = "tokio-macros"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update CHANGELOG.md.
# - Create "tokio-macros-x.y.z" git tag.
version = "2.6.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Tokio's proc macros.
"""
categories = ["asynchronous"]

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
