[package]
name = "tokio-test"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update CHANGELOG.md.
# - Create "tokio-test-0.4.x" git tag.
version = "0.4.5"
edition.workspace = true
rust-version.workspace = true
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Testing utilities for Tokio- and futures-based code
"""
categories = ["asynchronous", "development-tools::testing"]

[dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time", "test-util"] }
tokio-stream = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
