[package]
name = "tokio-util"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update CHANGELOG.md.
# - Create "tokio-util-0.7.x" git tag.
version = "0.7.18"
edition.workspace = true
rust-version.workspace = true
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Additional utilities for working with Tokio.
"""
categories = ["asynchronous"]

[features]
# No features on by default
default = []

# Shorthand for enabling everything
full = ["codec", "compat", "io-util", "time", "net", "rt", "join-map"]

net = ["tokio/net"]
compat = ["futures-io"]
codec = []
time = ["tokio/time", "slab"]
io = []
io-util = ["io", "tokio/rt", "tokio/io-util"]
rt = ["tokio/rt", "tokio/sync", "futures-util"]
join-map = ["rt", "hashbrown"]

__docs_rs = ["futures-util"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }
bytes = { workspace = true }
futures-core = { workspace = true }
futures-sink = { workspace = true }
futures-io = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
slab = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
tokio-stream = { workspace = true }

async-stream = { workspace = true }
futures = { workspace = true, default-features = true }
futures-test = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable` to rustc, or else
# dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]

[package.metadata.playground]
features = ["full"]

[lints]
workspace = true
