[package]
name = "tokio"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update doc url
#   - README.md
# - Update CHANGELOG.md.
# - Create "v1.x.y" git tag.
version = "1.49.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
An event-driven, non-blocking I/O platform for writing asynchronous I/O
backed applications.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]

[features]
# Include nothing by default
default = []

# enable everything
full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

fs = []
io-util = ["bytes"]
# stdin, stdout, stderr
io-std = []
macros = ["tokio-macros"]
net = [
  "libc",
  "mio/os-poll",
  "mio/os-ext",
  "mio/net",
  "socket2",
  "windows-sys/Win32_Foundation",
  "windows-sys/Win32_Security",
  "windows-sys/Win32_Storage_FileSystem",
  "windows-sys/Win32_System_Pipes",
  "windows-sys/Win32_System_SystemServices",
]
process = [
  "bytes",
  "libc",
  "mio/os-poll",
  "mio/os-ext",
  "mio/net",
  "signal-hook-registry",
  "windows-sys/Win32_Foundation",
  "windows-sys/Win32_System_Threading",
  "windows-sys/Win32_System_WindowsProgramming",
]
# Includes basic task execution capabilities
rt = []
rt-multi-thread = ["rt"]
signal = [
  "libc",
  "mio/os-poll",
  "mio/net",
  "mio/os-ext",
  "signal-hook-registry",
  "windows-sys/Win32_Foundation",
  "windows-sys/Win32_System_Console",
]
sync = []
test-util = ["rt", "sync", "time"]
time = []
# Unstable feature. Requires `--cfg tokio_unstable` to enable.
io-uring = ["dep:io-uring", "libc", "mio/os-poll", "mio/os-ext", "dep:slab"]
# Unstable feature. Requires `--cfg tokio_unstable` to enable.
taskdump = ["dep:backtrace"]

[dependencies]
tokio-macros = { workspace = true, optional = true }

pin-project-lite = { workspace = true }

# Everything else is optional...
bytes = { workspace = true, optional = true }
mio = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { workspace = true, optional = true }

# Currently unstable. The API exposed by these features may be broken at any time.
# Requires `--cfg tokio_unstable` to enable.
[target.'cfg(tokio_unstable)'.dependencies]
tracing = { workspace = true, optional = true } # Not in full

# Currently unstable. The API exposed by these features may be broken at any time.
# Requires `--cfg tokio_unstable` to enable.
[target.'cfg(all(tokio_unstable, target_os = "linux"))'.dependencies]
io-uring = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
mio = { workspace = true, optional = true, features = ["os-poll", "os-ext"] }
slab = { workspace = true, optional = true }
backtrace = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true, optional = true }
signal-hook-registry = { workspace = true, optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security_Authorization",
] }

[dev-dependencies]
tokio-test = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
futures = { workspace = true, default-features = true, features = ["async-await"] }
futures-test = { workspace = true }
mockall = { workspace = true }
async-stream = { workspace = true }
futures-concurrency = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
socket2 = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
rand = { workspace = true }

[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(target_os = "freebsd")'.dev-dependencies]
mio-aio = { workspace = true }

[target.'cfg(loom)'.dev-dependencies]
loom = { workspace = true }

[target.'cfg(all(tokio_unstable, target_has_atomic = "64"))'.dev-dependencies]
tracing-mock = { workspace = true }

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs", "--cfg", "tokio_unstable"]
# it's necessary to _also_ pass `--cfg tokio_unstable`
# to rustc, or else dependencies will not be enabled, and the docs build will fail.
rustc-args = ["--cfg", "tokio_unstable"]

[package.metadata.playground]
features = ["full", "test-util"]

[package.metadata.cargo_check_external_types]
# The following are types that are allowed to be exposed in Tokio's public API.
# The standard library is allowed by default.
allowed_external_types = [
  "bytes::buf::buf_impl::Buf",
  "bytes::buf::buf_mut::BufMut",
  "tokio_macros::*",
]

[lints]
workspace = true
