[package]
name = "tokio-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tokio]
version = "1.49.0"
path = ".."
features = ["fs","net","process","rt","sync","signal","time"]


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_linked_list"
path = "fuzz_targets/fuzz_linked_list.rs"
test = false
doc = false
